@@ -2,6 +2,7 @@
 	all : allow -D noopt to turn off optimizer
 	js : added js.Scroll
 	js : package names are now checked at runtime to avoid clashes with existing libs
+	js : added --js-namespace to create a namespace for types that are defined in the root
 
 2009-07-26: 2.04
 	flash9 : fixed get_full_path error with -D fdb
